(library
 (name validators)
 (public_name latex-perfectionist.validators)
 (libraries unix)
 (modules validator_core specification_compliant_validators validator_dag_system))

(executable
 (name validator_tests)
 (modules validator_tests)
 (libraries validators unix))

(executable
 (name validator_test)
 (modules validator_test)
 (libraries validators))

(executable
 (name test_week1_foundation)
 (modules test_week1_foundation)
 (libraries validators unix))

(rule
 (alias runtest)
 (action (run ./validator_tests.exe)))