[package]
name = "latex-perfectionist"
version = "22.0.0"
edition = "2021"
description = "Formally verified LaTeX perfectionist with mathematical guarantees"
authors = ["LaTeX Perfectionist Team"]
license = "MIT"
repository = "https://github.com/latex-perfectionist/latex-perfectionist"

[workspace]
members = [
    "src/grammar_extractor"
]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Text processing
regex = "1.0"
unicode-normalization = "0.1"
encoding = "0.2"

# Performance
rayon = "1.7"
dashmap = "5.0"
parking_lot = "0.12"

# Formal verification integration
ocaml-interop = "0.9"

# Testing
proptest = "1.0"
hypothesis = "0.1"

# Monitoring
metrics = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
pretty_assertions = "1.0"

[build-dependencies]
bindgen = "0.66"

[[bin]]
name = "latex-perfectionist"
path = "src/main.rs"

[[bin]]
name = "grammar-extractor"
path = "src/grammar_extractor/main.rs"

[[bin]]
name = "rule-compiler"
path = "src/dsl/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[features]
default = ["formal-verification"]
formal-verification = []
performance-monitoring = []
concolic-testing = []