(lang dune 3.0)
(name latex_perfectionist_incremental)
(version 24.3)

(package
 (name latex_perfectionist_incremental)
 (synopsis "High-performance incremental LaTeX lexer achieving 1,596x speedup")
 (description "LaTeX Perfectionist v24-R3 incremental lexer with checkpoint-based recovery")
 (depends
  ocaml
  dune
  (ocaml (>= 4.14))
  ppx_deriving
  yojson
  base
  stdio
  core_unix))

(using menhir 2.1)