(library
 (name latex_perfectionist_incremental)
 (public_name latex_perfectionist_incremental)
 (libraries unix str)
 (modules
  deep_state
  memory_pool
  state_cache
  parallel_processor
  core_lexer_real
  line_processor_real
  checkpoint_manager_real
  incremental_lexer_optimized)
 (foreign_stubs
  (language c)
  (names xxhash_stubs)
  (flags :standard)))